--- a/src/App.css
+++ b/src/App.css
@@ -8,38 +8,6 @@ body {
     color: #343a40;
     /* Dark gray text */
 }
-
-@font-face {
-    font-family: 'Font Awesome 6 Free';
-    src: url('../public/assets/fa/fonts/fa-regular-400.woff2') format('woff2'),
-        url('../public/assets/fa/fonts/fa-regular-400.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'Font Awesome 6 Free';
-    src: url('../public/assets/fa/fonts/fa-solid-900.woff2') format('woff2'),
-        url('../public/assets/fa/fonts/fa-solid-900.ttf') format('truetype');
-}
-
-@font-face {
-    font-family: 'Font Awesome 6 Brands';
-    src: url('../public/assets/fa/fonts/fa-brands-400.woff2') format('woff2'),
-        url('../public/assets/fa/fonts/fa-brands-400.ttf') format('truetype');
-}
-
-
-/* Header */
-/* header {
-    background-color: #007bff;
-    color: white;
-    padding: 1rem;
-    text-align: center;
-}
-
-header h1 {
-    margin: 0;
-    font-size: 2rem;
-} */
         
 .header-bg {
     background-image: url('../public/image_bg_blue_gradient.png');
@@ -92,9 +60,9 @@ header h1 {
 
 /* Sections */
 section {
-    padding: 2rem 1rem;
-    margin: 1rem 0;
-    background-color: white;
+    padding: 0rem 1rem 1rem 1rem;
+    /* margin: 1rem 0; */
+    /* background-color: white; */
     border-radius: 0.25rem;
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
 }
@@ -105,18 +73,20 @@ section h2 {
 }
 
 section p {
-    margin: 0;
+    margin-bottom: 1rem;
 }
 
 section ul {
-    list-style-type: none;
+    /* list-style-type: none; */
     padding: 0;
+    margin-bottom: 1rem;
 }
 
 section li {
+    margin-left: 2rem;
     background-color: #e9ecef;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
+    padding: 0.25rem;
+    margin-bottom: 0.25rem;
     border-radius: 0.25rem;
 }
 
