--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,5 @@
 /* App.css */
 
-/* General Styles */
-body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f8f9fa;
-    /* Light gray background */
-    color: #343a40;
-    /* Dark gray text */
-}
-        
-.header-bg {
-    background-image: url('../public/images/image_bg_colorado.png');
-    background-size: cover;
-    background-position: center;
-    padding: 1rem 0;
-}
-
-.profile-image {
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
-    width: 120px;
-    height: 120px;
-}
-        
-.section-transition {
-    position: relative;
-    height: 20px;
-    margin-top: -20px;
-    background: linear-gradient(to bottom, transparent, white);
-    z-index: 10;
-}
-
-/* Menu */
-.menu {
-  display: flex;
-  flex-direction: column;
-  background-color: #f8f9fa;
-  padding: 1rem;
-}
-
-.menu-item {
-  padding: .5rem;
-  border-bottom: 1px solid #ccc;
-  border-radius: 0.25rem;
-  cursor: pointer;
-}
-
-.menu-item h5{
-    margin: 5px;
-}
-
-.menu-item.selected {
-    background-color: #e9ecef;
-    font-weight: bolder; /* Bold text */
-}
-
-.menu-item:hover {
-  background-color: #dee2e6;
-}
-
 /* Main Content */
 .main-content {
   flex: 1;
@@ -68,7 +10,7 @@ body {
 section {
     padding: 0rem 1rem 1rem 1rem;
     border-radius: 0.25rem;
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
 }
 
 section h1 {
@@ -76,12 +18,13 @@ section h1 {
     font-size: 2em; /* Larger font size */
     font-weight: bold; /* Bold text */
     text-align: center; /* Center the text */
+    margin-top: 10px; /* Add space above the h1 */
     margin-bottom: 10px; /* Add space below the h1 */
   }
 
 section h2 {
     font-size: 1.5rem;
-    border-bottom: 1px solid #ccc; /* Light gray line */
+    /* border-bottom: 1px solid #ccc; /* Light gray line */
     margin-top: 0.5em; /* Adjust spacing */
     margin-bottom: 0.5em;
 }
@@ -90,15 +33,8 @@ section p {
     margin-bottom: 1rem;
 }
 
-/* section ul {
-    padding: 0;
-    margin-bottom: 1rem;
-} */
-
 section .MuiListItem-root li  {
-    /* list-style: none; */
     background-color: #e9ecef;
-    /* padding: 0.25rem; */
     margin-bottom: 0.25rem;
     border-radius: 0.25rem;
 }
@@ -119,7 +55,7 @@ section a:hover {
 /* Footer */
 footer {
     text-align: center;
-    padding: 1rem;
+    padding: .5rem;
     background-color: #5f6368;
     color: white;
 }
