--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 /* App.css */
 
+/* Limit the main site container to a max width and center it */
+.site-container {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
 /* Main Content */
 .main-content {
   flex: 1;
@@ -50,6 +58,33 @@ section a {
 
 section a:hover {
     text-decoration: underline;
+}
+
+/* Images in Markdown Content */
+.markdown-content img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+
+/* Responsive Iframe */
+.responsive-iframe {
+  position: relative;
+  width: 100%; /* Maximum width for the iframe */
+  margin: 0 auto; /* Center the iframe */
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+}
+
+.responsive-iframe iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 /* Footer */
