--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 /* Limit the main site container to a max width and center it */
 .site-container {
-  max-width: 1200px;
+  max-width: 1100px;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
@@ -19,6 +19,10 @@ section {
     padding: 0rem 1rem 1rem 1rem;
     border-radius: 0.25rem;
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
+    min-height: 100%;
+    /* display: flex;
+    flex-direction: column; */
+    /* justify-content: stretch; */
 }
 
 section h1 {
@@ -33,8 +37,14 @@ section h1 {
 section h2 {
     font-size: 1.5rem;
     /* border-bottom: 1px solid #ccc; /* Light gray line */
-    margin-top: 0.5em; /* Adjust spacing */
-    margin-bottom: 0.5em;
+    margin-top: 0.5rem; /* Adjust spacing */
+    margin-bottom: 0.5rem;
+}
+
+section h3 {
+    font-size: 1.1rem;
+    margin-top: 0.5rem; /* Adjust spacing */
+    margin-bottom: 0.1rem;
 }
 
 section p {
@@ -58,6 +68,14 @@ section a {
 
 section a:hover {
     text-decoration: underline;
+}
+
+section small {
+  font-size: 0.85em;
+  color: #666;
+  display: block;
+  text-align: center;
+  margin-top: 0.2em;
 }
 
 /* Images in Markdown Content */
